# metaeuk

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  azure-pipelines.yml
.github/: ISSUE_TEMPLATE.md
data/: CMakeLists.txt  assigntaxonomy.sh  easypredict.sh  predictexons.sh  reduceredundancy.sh  taxtocontig.sh  unitetoseqdb.sh  unitetoseqdbs.sh
src/: CMakeLists.txt  LocalCommandDeclarations.h  metaeuk.cpp
src/commons/: CMakeLists.txt  LocalParameters.cpp  LocalParameters.h  PredictionParser.h
src/exonpredictor/: CMakeLists.txt  alignorftocontig.cpp  collectOptimalSet.cpp  collectoptimalset.cpp  grouppredictions.cpp  groupstoacc.cpp  reduceredundancy.cpp  resultspercontig.cpp  reversefragments.cpp  unitesetstofasta.cpp  unitesetstosequencedb.cpp
src/workflow/: AssignTaxonomy.cpp  CMakeLists.txt  EasyPredict.cpp  PredictExons.cpp  ReduceRedundancy.cpp  TaxToContig.cpp  UniteToSeqdb.cpp  UniteToSeqdbs.cpp
tests/: check_orf_to_contig.pl  compare_fasta_results.pl  run.sh  test.sh  test_groups.sh  test_no_overlap.sh
tests/cluster_rep/: as_should_final_grouped_predictions_rep.fas  as_should_final_united_exons_aa.fas  cluster_rep_recovery.txt  contigs.fna  proteins.faa
tests/minus_strand/: as_should_final_grouped_predictions_rep.fas  as_should_final_united_exons_aa.fas  as_should_nucl_6f_orf_aligned_to_contig  contigs.fna  minus_strand_recovery.txt  proteins.faa
tests/multi_exon/: as_should_final_grouped_predictions_rep.fas  as_should_final_united_exons_aa.fas  as_should_nucl_6f_orf_aligned_to_contig  (+3 more)
util/: metaeuk_wrapper.sh
(+18 files in other folders)
